src/test/ui/specialization/specialization-overlap-negative.stderr
error[E0748]: found both positive and negative implementation of trait `std::marker::Send` for type `TestType<_>`:
  --> $DIR/specialization-overlap-negative.rs:9:1
   |
LL | unsafe impl<T: Clone> Send for TestType<T> {}
   | ------------------------------------------ positive implementation here
LL | impl<T: MyTrait> !Send for TestType<T> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ negative implementation here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0748`.
